welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:-5: error: Unmatched closing brace '}' ignored here
	}
        ^DwarfCode:-4: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^DwarfCode:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^